# youtube-proxy-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Procfile  README.md
.github/workflows/: main.yml
src/: date_util.rs  key_manager.rs  main.rs  timer.rs  youtube_client.rs  youtube_manager.rs
src/endpoints/: mod.rs  search.rs  single.rs  videos.rs
src/models/: channel.rs  channel_stats.rs  content_type.rs  mod.rs  playlist.rs  video.rs  youtube.rs
src/models/youtube/: mod.rs
src/models/youtube/items/: list_item.rs  mod.rs  playlist_item.rs  search_item.rs
src/models/youtube/parts/: content_details.rs  id.rs  kind.rs  mod.rs  resource_id.rs  snippet.rs  stats.rs  thumbnails.rs
test/resources/: search_expected_channel.json  search_result_channel.json  search_result_playlist.json  search_result_video.json  single_result_channel.json  single_result_empty.json  single_result_playlist.json  single_result_video.json
